# Webgame

./: .gitignore  CMakeLists.txt  README  README.md  TODO  index.html  index.js
client/: debug.js  entities.js  entity.js  index.html  index.js  inputs.js  main.js  network.js  player.js  utils.js  vectors.js
game/: main.cpp
lib/client/: entity.js  gl.js  index.html  inputs.js  main.js  network.js  player.js  utils.js  vectors.js
lib/client/games/game/: main.js
lib/client/games/test-server/: main.js
lib/server/: .gitignore  main_bots.cpp  main_reset.cpp  main_server.cpp
lib/server/include/webgame/: application.hpp  behavior.hpp  common.hpp  config.hpp  containers.hpp  entities.hpp  entities.hxx  entity.hpp  env.hpp  filesystem.hpp  lock.hpp  log.hpp  nmoc.hpp  npc.hpp  persistence.hpp  player.hpp  player_conn.hpp  protocol.hpp  random.hpp  redis_helper.hpp  redis_persistence.hpp  save_load.hpp  serialization.hpp  server.hpp  stationnary_entity.hpp  time.hpp  utils.hpp  vector.hpp
lib/server/src/: application.cpp  behavior.cpp  entities.cpp  entity.cpp  env.cpp  log.cpp  npc.cpp  player.cpp  player_conn.cpp  protocol.cpp  random.cpp  redis_helper.cpp  redis_persistence.cpp  save_load.cpp  server.cpp  stationnary_entity.cpp  time.cpp  utils.cpp  vector.cpp
lib/server/tests/: test_entity.cpp  test_json.cpp  test_redis_helper.cpp  test_redis_persistence.cpp  test_serialization.cpp  test_server.cpp  tests.hpp
server/: .gitignore  Behavior.cpp  Behavior.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  Env.cpp  Env.hpp  Server.cpp  Server.hpp  WsConn.cpp  WsConn.hpp  behavior.cpp  behavior.hpp  entities.cpp  entity.cpp  entity.hpp  env.hpp  main.cpp  redis_conn.cpp  redis_conn.hpp  reset.cpp  server.cpp  server.hpp  test.cpp  types.hpp  ws_conn.cpp  ws_conn.hpp
server/misc/: any.hpp  config.hpp  containers.hpp  globals.cpp  json.cpp  json.hpp  nmoc.hpp  time.hpp  utils.cpp  utils.hpp  vector.cpp  vector.hpp
